[gd_scene load_steps=15 format=3 uid="uid://d0x7v8jkwymj8"]

[ext_resource type="Theme" uid="uid://t1fx64h2rttm" path="res://fonts/basetheme.tres" id="1_urbnd"]
[ext_resource type="Script" path="res://Scripts/main_screen.gd" id="2_yqq6k"]
[ext_resource type="FontData" uid="uid://cuiklovah37q8" path="res://fonts/gamefont.TTF" id="3_cr7vu"]
[ext_resource type="Texture2D" uid="uid://cjri77xlro5xj" path="res://Textures/icons/Menu/Larrowbutton.png" id="4_kxx0v"]
[ext_resource type="Script" path="res://Scripts/Card_View.gd" id="5_0r7j2"]
[ext_resource type="Texture2D" uid="uid://i4u8ppyhu23v" path="res://icon.png" id="6_fjffe"]
[ext_resource type="Font" uid="uid://b7w13153ckv3i" path="res://fonts/basefont.tres" id="7_iyg5q"]
[ext_resource type="PackedScene" uid="uid://htv8fosh42iq" path="res://Scenes/shaderlayer.tscn" id="8_nsrgr"]
[ext_resource type="Texture2D" uid="uid://do88enexe7ikk" path="res://Textures/background/background0.png" id="9_iv8ty"]
[ext_resource type="Texture2D" uid="uid://txqxc2bts3kc" path="res://Textures/background/table_base.png" id="10_0u5j7"]

[sub_resource type="Font" id="Font_q43j5"]
spacing_bottom = 1
data/0 = ExtResource( "3_cr7vu" )

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrcyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rtxi"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.443137, 0.247059, 0.207843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88ora"]
bg_color = Color(0.796078, 0.796078, 0.796078, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.443137, 0.247059, 0.207843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main_Screen" type="Control"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource( "1_urbnd" )
script = ExtResource( "2_yqq6k" )

[node name="Base" type="Control" parent="."]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="to_deck" type="Button" parent="Base"]
offset_left = 936.0
offset_top = 236.0
offset_right = 970.0
offset_bottom = 300.0
rect_scale = Vector2(2, 2)
focus_mode = 0
theme = ExtResource( "1_urbnd" )
theme_override_fonts/font = SubResource( "Font_q43j5" )
theme_override_font_sizes/font_size = 8
action_mode = 0
text = "D
E
C
K"
icon = ExtResource( "4_kxx0v" )
flat = true
expand_icon = true
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="to_world" type="Button" parent="Base"]
offset_left = 384.0
offset_top = 32.0
offset_right = 640.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 24
text = "ENTER WORLD"
flat = true
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="card_view" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1024.0
offset_right = 1024.0
rect_scale = Vector2(1.00927, 0.997562)
mouse_filter = 1
script = ExtResource( "5_0r7j2" )

[node name="CharacterList" type="ItemList" parent="card_view"]
rect_min_size = Vector2(192, 456)
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 52.0
offset_right = 184.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource( "1_urbnd" )
fixed_icon_size = Vector2(32, 32)
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_anchors_": false,
"_edit_use_custom_anchors": false
}

[node name="SearchBar" type="TabBar" parent="card_view"]
offset_left = 32.0
offset_top = 14.0
offset_right = 224.0
offset_bottom = 53.0
mouse_filter = 1
theme = ExtResource( "1_urbnd" )
tab_count = 2
tab_0/title = "Creature"
tab_1/title = "Card"

[node name="DataShower" type="VBoxContainer" parent="card_view"]
offset_left = 576.0
offset_top = 32.0
offset_right = 960.0
offset_bottom = 536.0
theme = ExtResource( "1_urbnd" )
theme_override_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="card_view/DataShower"]
offset_right = 384.0
offset_bottom = 29.0
theme = ExtResource( "1_urbnd" )
text = "TESTING"
horizontal_alignment = 1

[node name="Texture" type="TextureRect" parent="card_view/DataShower"]
rect_min_size = Vector2(384, 96)
offset_top = 29.0
offset_right = 384.0
offset_bottom = 125.0
theme = ExtResource( "1_urbnd" )
texture = ExtResource( "6_fjffe" )
ignore_texture_size = true
stretch_mode = 5

[node name="ent" type="VBoxContainer" parent="card_view/DataShower"]
offset_top = 125.0
offset_right = 384.0
offset_bottom = 474.0

[node name="Types" type="Label" parent="card_view/DataShower/ent"]
offset_right = 384.0
offset_bottom = 29.0
text = "Types"
horizontal_alignment = 1

[node name="TypeList" type="GridContainer" parent="card_view/DataShower/ent"]
rect_min_size = Vector2(0, 64)
offset_top = 33.0
offset_right = 384.0
offset_bottom = 97.0
size_flags_horizontal = 7
size_flags_vertical = 5
columns = 6

[node name="Stats" type="Label" parent="card_view/DataShower/ent"]
offset_top = 101.0
offset_right = 384.0
offset_bottom = 130.0
text = "Stats"
horizontal_alignment = 1

[node name="StatList" type="ItemList" parent="card_view/DataShower/ent"]
rect_min_size = Vector2(0, 215)
offset_top = 134.0
offset_right = 384.0
offset_bottom = 349.0
theme = ExtResource( "1_urbnd" )

[node name="card" type="VBoxContainer" parent="card_view/DataShower"]
visible = false
offset_top = 474.0
offset_right = 384.0
offset_bottom = 692.0
size_flags_vertical = 3

[node name="attributes" type="Label" parent="card_view/DataShower/card"]
offset_right = 384.0
offset_bottom = 29.0
text = "Attributes"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Attributelist" type="GridContainer" parent="card_view/DataShower/card"]
rect_min_size = Vector2(0, 64)
offset_top = 33.0
offset_right = 384.0
offset_bottom = 97.0
size_flags_horizontal = 7
size_flags_vertical = 5
columns = 6

[node name="Description" type="Label" parent="card_view/DataShower/card"]
offset_top = 101.0
offset_right = 384.0
offset_bottom = 130.0
text = "Description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description_out" type="Label" parent="card_view/DataShower/card"]
offset_top = 134.0
offset_right = 384.0
offset_bottom = 155.0
size_flags_vertical = 7
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
autowrap_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="card_view/DataShower/card"]
offset_top = 159.0
offset_right = 384.0
offset_bottom = 188.0
text = "Power"
horizontal_alignment = 1
autowrap_mode = 2

[node name="power_out" type="Label" parent="card_view/DataShower/card"]
offset_top = 192.0
offset_right = 384.0
offset_bottom = 218.0
size_flags_vertical = 3
horizontal_alignment = 1
autowrap_mode = 2

[node name="add_to_deck" type="Button" parent="card_view/DataShower"]
offset_top = 474.0
offset_right = 384.0
offset_bottom = 504.0
mouse_filter = 1
theme = ExtResource( "1_urbnd" )
shortcut_in_tooltip = false
text = "ADD TO DECK"

[node name="Panel" type="Panel" parent="card_view"]
show_behind_parent = true
offset_left = 576.0
offset_top = 32.0
offset_right = 960.0
offset_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource( "1_urbnd" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type_Matches" type="Panel" parent="card_view"]
offset_left = 256.0
offset_top = 320.0
offset_right = 512.0
offset_bottom = 576.0
theme = ExtResource( "1_urbnd" )

[node name="title" type="Label" parent="card_view/Type_Matches"]
offset_right = 140.0
offset_bottom = 32.0
text = "Type Matches"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="TypeList" type="ItemList" parent="card_view/Type_Matches"]
offset_top = 32.0
offset_right = 96.0
offset_bottom = 256.0
fixed_column_width = 80
icon_mode = 0
fixed_icon_size = Vector2(32, 32)

[node name="Strong_against" type="Label" parent="card_view/Type_Matches"]
offset_left = 158.0
offset_top = 4.0
offset_right = 254.0
offset_bottom = 33.0
text = "Modified"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_anchors_": false,
"_edit_use_custom_anchors": false
}

[node name="Content" type="RichTextLabel" parent="card_view/Type_Matches/Strong_against"]
offset_left = -56.0
offset_top = 32.0
offset_right = 88.0
offset_bottom = 244.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 12

[node name="in_use" type="Panel" parent="card_view"]
offset_left = 256.0
offset_top = 48.0
offset_right = 512.0
offset_bottom = 304.0
theme = ExtResource( "1_urbnd" )

[node name="use_bar" type="TabBar" parent="card_view/in_use"]
offset_top = -40.0
offset_right = 256.0
theme = ExtResource( "1_urbnd" )
clip_tabs = false
tab_count = 2
tab_0/title = "Cards"
tab_1/title = "Allies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur_deck" type="Control" parent="card_view/in_use"]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="card_view/in_use/cur_deck"]
offset_right = 160.0
offset_bottom = 29.0
text = "CURRENT DECK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="counter" type="Label" parent="card_view/in_use/cur_deck"]
offset_left = 188.0
offset_top = 2.0
offset_right = 254.0
offset_bottom = 31.0
text = "20/30"
horizontal_alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck_container" type="ScrollContainer" parent="card_view/in_use/cur_deck"]
offset_left = 32.0
offset_top = 60.0
offset_right = 228.0
offset_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck_grid" type="GridContainer" parent="card_view/in_use/cur_deck/deck_container"]
rect_min_size = Vector2(128, 128)
offset_right = 128.0
offset_bottom = 128.0
theme_override_constants/vseparation = 2
theme_override_constants/hseparation = 2
columns = 3

[node name="cant_label" type="Label" parent="card_view/in_use/cur_deck"]
offset_top = 96.0
offset_right = 256.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource( "StyleBoxEmpty_hrcyf" )
text = "NEED AT LEAST 10
CARDS"
horizontal_alignment = 1
vertical_alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur_chars" type="Control" parent="card_view/in_use"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="card_view/in_use/cur_chars"]
offset_right = 160.0
offset_bottom = 29.0
text = "CURRENT ALLIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charlist" type="ItemList" parent="card_view/in_use/cur_chars"]
offset_left = 6.0
offset_top = 32.0
offset_right = 250.0
offset_bottom = 244.0
fixed_icon_size = Vector2(48, 48)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cant_label" type="Label" parent="card_view/in_use/cur_chars"]
offset_top = 96.0
offset_right = 256.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource( "StyleBoxEmpty_hrcyf" )
text = "NEED AT LEAST
1 ALLY"
horizontal_alignment = 1
vertical_alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="card_view/in_use"]
offset_left = 32.0
offset_top = 240.0
offset_right = 228.0
offset_bottom = 269.0
text = "Click To Remove"
horizontal_alignment = 1

[node name="Return" type="Button" parent="card_view"]
offset_left = 32.0
offset_top = 512.0
offset_right = 224.0
offset_bottom = 576.0
theme = ExtResource( "1_urbnd" )
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource( "7_iyg5q" )
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource( "StyleBoxFlat_1rtxi" )
theme_override_styles/pressed = SubResource( "StyleBoxFlat_88ora" )
theme_override_styles/focus = SubResource( "StyleBoxFlat_88ora" )
theme_override_styles/disabled = SubResource( "StyleBoxFlat_88ora" )
theme_override_styles/normal = SubResource( "StyleBoxFlat_88ora" )
action_mode = 0
text = "BACK"

[node name="shaders" parent="." instance=ExtResource( "8_nsrgr" )]

[node name="background" type="TextureRect" parent="."]
show_behind_parent = true
offset_top = -95.766
offset_right = 1024.0
offset_bottom = 416.234
mouse_filter = 2
texture = ExtResource( "9_iv8ty" )
ignore_texture_size = true
stretch_mode = 5
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="table" type="TextureRect" parent="."]
show_behind_parent = true
offset_top = 319.22
offset_right = 1024.0
offset_bottom = 831.22
mouse_filter = 2
texture = ExtResource( "10_0u5j7" )
ignore_texture_size = true
stretch_mode = 5
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[connection signal="pressed" from="Base/to_deck" to="." method="to_deck_pressed"]
[connection signal="item_selected" from="card_view/CharacterList" to="card_view" method="_on_character_list_item_selected"]
[connection signal="tab_changed" from="card_view/SearchBar" to="card_view" method="selected_tab"]
[connection signal="pressed" from="card_view/DataShower/add_to_deck" to="card_view" method="add_item_to_dek"]
[connection signal="item_selected" from="card_view/Type_Matches/TypeList" to="card_view" method="typelist_selected"]
[connection signal="tab_changed" from="card_view/in_use/use_bar" to="card_view" method="use_bar_tab_changed"]
[connection signal="item_selected" from="card_view/in_use/cur_chars/charlist" to="card_view" method="_on_charlist_item_selected"]
[connection signal="pressed" from="card_view/Return" to="." method="return_card_pressed"]
